リモートワークについて: 最後のセクションを更新

--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -39,7 +39,7 @@
 </ol>
 
 <h2 id="checklist">設備チェックリスト</h2>
-<p>リモートワークの準備はできていますか？オフィスにあるものと同等の椅子やディスプレイを用意しろとは言いませんが、8時間を集中して過ごす以上最低限揃えなければならないものがあります。</p>
+<p>リモートワークの準備はできていますか？ オフィスにあるものと同等の椅子やディスプレイを用意しろとは言いませんが、8時間を集中して過ごす以上最低限揃えなければならないものはあります。</p>
 
 <ol>
 <li>プライバシが確保されている部屋・空間</li>
@@ -114,16 +114,16 @@
 
 <p>『ヘルシープログラマ』では、このポモドーロの休憩中になにかしらのエクササイズをする「ポモドーロワークアウト」を推奨しています。僕自身、ポモドーロの休憩中は立ち上がって部屋を歩いたり、自重トレーニングをしたりすることで運動量を稼いでいます。</p>
 
-<p>John Sonmezは『SOFT SKILLS』の中で「週に40時間働くからといって、80ポモドーロをこなせるわけではない（あなたがその偉業を達成できるなら、私は本当に驚くだろう）」[Sonmez2016, p216]と述べています。計算上一日8時間働くならポモドーロは16回できるはずですが、実際のところ不可能です。会議がないまったく空きの日に頑張ってもせいぜい10ポモドーロあたりが限度で、それ以降は疲れて惰性で働きたくなり、ポモドーロのタイマーを動かす気になれません（休憩中のエクササイズが疲れの原因ではないですよ！）。ポモドーロテクニックはインターバルトレーニングのようなもので、激しい疲労感を呼ぶものなのです。</p>
+<p>John Sonmezは『SOFT SKILLS』の中で「週に40時間働くからといって、80ポモドーロをこなせるわけではない（あなたがその偉業を達成できるなら、私は本当に驚くだろう）」[Sonmez2016, p216]と述べています。計算上一日8時間働くならポモドーロは16回できるはずですが、実際のところ不可能です。会議がないまったく空きの日に頑張ってもせいぜい10ポモドーロあたりが限度で、それ以降は疲れて惰性で働きたくなり、ポモドーロのタイマーを動かす気になれません。ポモドーロテクニックはインターバルトレーニングのようなもので、激しい疲労感を呼ぶものなのです。</p>
 
 <p>一日にこなしたポモドーロの数を日ごとに記録していくと、「何曜日は何ポモドーロできるはずだ」という基準が見えてきます。これをもとに曜日ごとの目標を決めたり、一日のパフォーマンスをふりかえったりできます。</p>
 
 <h3 id="notify">通知させすぎない</h3>
-<p>自宅では突然声をかけられたり、雑談の話題を振られたりすることによる割り込みが発生しません。これはとても都合が良いです。Tom DeMarcoとTimothy Listerによれば、生産性を上げるには割り込みや騒音によって精神集中が中断されない状態を維持するのが重要だからです[Demarco2013]。</p>
+<p>自宅では突然声をかけられたり、雑談の話題を振られたりすることによる割り込みが発生しません。これはとても都合が良いことです。Tom DeMarcoとTimothy Listerによれば、生産性を上げるには割り込みや騒音によって精神集中が中断されない状態を維持するのが重要だからです[Demarco2013]。</p>
 
 <p>ただし、声掛けによる中断はなくなったものの依然としてチャットやメールの通知による割り込みは発生します。リモートワークならそれがより顕著になるでしょう。直接声をかけられない以上、これらのツールがコミュニケーションの要になるからです。</p>
 
-<p>これらによる通知はどうすればいいのでしょうか？解決策は単純です。通知を切ってしまえばいいのです。Neal Fordが『プロダクティブ・プログラマ』で述べたように、不要な通知を切ることで気が散る要因をひとつ取り除くことができます。[Ford2009, pp.46-47]。受信箱に入ってくるメールの中で返信すべきものは少ないですし、5分以内に返信しないといけないメールはまずありえないでしょう。チャットだって例外ではありません。本当にリアクションしないといけないメッセージにはメンションを入れてもらうようチーム内で合意をとることで、大体のメッセージを無視できます。</p>
+<p>これらによる通知はどうすればいいのでしょうか？ 解決策は単純です。通知を切ってしまえばいいのです。Neal Fordが『プロダクティブ・プログラマ』で述べたように、不要な通知を切ることで気が散る要因をひとつ取り除くことができます。[Ford2009, pp.46-47]。受信箱に入ってくるメールの中で返信すべきものは少ないですし、5分以内に返信しないといけないメールはまずありえないでしょう。チャットだって例外ではありません。本当にリアクションしないといけないメッセージにはメンションを入れてもらうようチーム内で合意をとることで、大体のメッセージを無視できます。</p>
 
 <p>Slackを使っているなら、本当に必要なチャンネル以外には参加せず、generalチャンネルはミュートしましょう。randomなど参加する必要のないチャンネルから抜けましょう。メンションが付いていないメッセージはポモドーロの休憩中にチラリと読む程度で構いません。</p>
 
@@ -134,7 +134,7 @@
 <h2 id="workstation">設備に投資する</h2>
 <p>Josb Carterは『プログラマのためのサバイバルマニュアル』の中で、ディスプレイ・キーボード・マウスへ投資すること、身体に合った机や椅子を探すことの重要さを強調しています[Carter2012, pp.131-135]。Joan Stiglianiは反復運動過多損傷の対策のひとつとして、人間工学的に設計されたキーボードを使うことを推奨しています[Stigliani1997, pp.122-128]。</p>
 
-<p>あなたの作業環境の質はオフィスよりも低いですか？もしそうなら、長期間のリモートワークによって身体的なダメージが蓄積していく可能性も拭いきれません。経済的な余裕があるならエルゴノミクスの観点から優れた道具を揃えましょう。会社全体にリモートワークが浸透していけば、交渉次第で道具への費用負担をしてくれるかもしれません。</p>
+<p>家の作業環境の質はオフィスよりも低いと感じますか？ もしそうなら、長期間のリモートワークによって身体的な（特に腰や首に対する）ダメージが蓄積していく可能性も拭いきれません。経済的な余裕があるならエルゴノミクスの観点から見て優れた道具を揃えましょう。会社全体にリモートワークが浸透していけば、交渉次第で道具への費用負担をしてくれるかもしれません。</p>
 
 <h2 id="caution">注意すべきこと</h2>
 <h3 id="embed">組込み開発</h3>
@@ -143,22 +143,30 @@
 <p>案として、オフィスの開発機とボードとをシリアルコンソールで繋ぎ<code>cu(1)</code>などからボードのコンソールへ接続できるようにする手があります。しかしハードウェアレベルの操作が必要になる可能性があるなら安心できませんし、それが開発工程の中で必須だとリモートワークは不可能です。</p>
 
 <h3 id="tel">サポートや営業の電話番</h3>
-<p>リモートワーク中に顧客からかかってくる電話をどうするのか会社全体（あるいはチーム全体）が把握していますか？社用のスマートフォンを持ち出してリモートワークしていても電話をとれるようにするのか、誰かがオフィスで待機する必要があるのか、電話受付を一時的に中止するのか……などリモートワークを実施する動機・理由に合わせたやり方があります。また、やり方を決めたとしてもステークホルダ全員が決定事項を知っていなければなりません。</p>
+<p>リモートワーク中に顧客からかかってくる電話をどうするのか会社全体（あるいはチーム全体）が把握していますか？ 社用のスマートフォンを持ち出してリモートワークしていても電話をとれるようにするのか、誰かがオフィスで待機する必要があるのか、電話受付を一時的に中止するのか……などリモートワークを実施する動機・理由に合わせたやり方があります。また、やり方を決めたとしてもステークホルダ全員が決定事項を知っていなければなりません。</p>
 
 <h3 id="paper">紙の情報</h3>
-<p>ホワイトボードや付箋など、オフィスへ行かないと参照できない媒体で残された情報はすべて電子化してありますか？ここではプロジェクト管理やタスク管理は電子化したほうが効率的だと主張するわけではありません。しかしチームメンバ全員がリモートワークをして一箇所の拠点に集まることができないなら、そのような情報はすべて電子化する必要があります。なにかしらのSaaSを契約したり、社内サーバにプロジェクト管理ソフトウェアを導入したりすることになります。</p>
+<p>ホワイトボードや付箋など、オフィスへ行かないと参照できない媒体で残された情報はすべて電子化してありますか？ ここではプロジェクト管理やタスク管理は電子化したほうが効率的だと主張するわけではありません。しかしチームメンバ全員がリモートワークをして一箇所の拠点に集まることができないなら、そのような情報はすべて電子化する必要があります。なにかしらのSaaSを契約したり、社内サーバにプロジェクト管理ソフトウェアを導入したりすることになります。</p>
 
 <h3 id="eco">経済的負担と要求</h3>
-<p>環境や季節に応じて、オフィスへ行くよりリモートワークするほうが家計への負担は大きくなります。冬の北海道・東北地方では暖房代がかかります。また一般的に電気・ガス・水道代もわずかに上がります。真夏の関東地方ではエアコンが必須です。</p>
+<p>環境や季節に応じて、オフィスへ行くよりリモートワークするほうが家計への負担は大きくなります。一般的に電気・ガス・水道代は上がります。冬の北海道・東北地方では暖房代がかかります。真夏の関東地方ではエアコンが必須です。</p>
 
-<p>このような経済的負担に対するスタンスは企業によって様々です。本音を言えばこれらの費用は会社側で負担してもらいたいものですが、「○社はこうしているからウチもこうすべきだ！」「社員に設備代を肩代わりさせているだけだ！」といった主張を一方的に論じたところでなにも変わらないことは確かです。雇用主との溝を深めるか、ただ言いたいことを言ってフラストレーションを発散させるだけになります。</p>
+<p>このような経済的負担に対するスタンスは企業によって様々です。本音を言えばこれらの費用は会社側で負担してもらいたいものですが「○社はこうしているからウチもこうすべきだ！」「社員に設備代を肩代わりさせているだけだ！」といった主張を一方的に論じたところでなにも変わらないことは確かです。雇用主や管理本部との溝を深めるか、言いたいことを言ってフラストレーションを発散させるだけが関の山です。</p>
 
-<p>福利厚生に関する要求を主張するときは、目的が議論に勝つことではなく福利厚生の改善なのを忘れないようにしましょう。議論に勝ち、相手の誤りを指摘し、興奮した口調でまくしたててなにが変わるのでしょうか？仮に今回は「勝った」として、次回から交渉のテーブルが設けられることはあるのでしょうか？このようななにかしらの決定権を握っている（もしくは間接的に握っている）人に対する交渉は、Dale Carnegieが提唱した「人を説得する十二原則」にしたがうべきです[Carnegie1999]。</p>
+<p>福利厚生に関する要求を主張するときは、議論に勝つことではなく福利厚生の改善が目的なのを忘れないようにしましょう。議論に勝ち、相手の誤りを指摘し、興奮した口調でまくしたててなにが変わるのでしょうか？ 仮に今回は「勝った」として、次回から交渉のテーブルが設けられることはあるのでしょうか？ 制度を決める側も完璧ではありません。経験のない職種や暮らしたことがない地域のことがよく分かっていないだけかもしれません。このようなときにこそ歩み寄りと相互理解の努力が求められます。</p>
+
+<div class="referbox">
+  <img src="/img/info.png" alt="info">
+  <div class="text">
+    <p><b>地域の都合は住んでみないと分からない？</b></p>
+    <p>新型コロナウイルス感染拡大防止のために、事態収束まで特別の事情がない限り出社は禁止でリモートワークすることになりました。この「原則リモートワーク」の状況は立て続けに延長され、ついには6ヶ月以上先まで延長されました。</p>
+    <p>リモートワークなら冬の間は暖房代がかかって大変だと関東在住の人事部の方に話すと「でも東京も夏は冷房代がかかりますよ」と返されました。東京の冷房代と北海道冬季の暖房代が等しいと思っているような言い方でした。話を続けると「暖房代」とは電気代のことだと思っていたようです。冬の北海道では灯油ストーブが暖房としてひろく使われており、灯油代は電気代より高いことを話すと、とても驚いていました。</p>
+    <p>反対に、北海道から離れたことのない人は東京で連日続く殺人的な蒸し暑さや水のまずさや川の汚さを想像するのが難しいでしょう。その地域の都合は実際に暮らしてみないと分からないものではないでしょうか。</p>
+  </div>
+</div>
 
 <h2 id="ref">参考文献</h2>
 <dl>
-<dt><b>[Carnegie1999]</b></dt>
-<dd>Dale Carnegie 著, 山口博 訳, 『人を動かす [新装版]』, 創元社, ISBN978-4-422-10051-7, 1999</dd>
 <dt><b>[Carter2012]</b></dt>
 <dd>Josb Carter 著, 長尾高弘 訳, 『プログラマのためのサバイバルマニュアル』, 株式会社オライリー・ジャパン, ISBN978-4-87311-571-9, 2012</dd>
 <dt><b>[Demarco2013]</b></dt>
