--- a/practice/small_monitoring.html
+++ b/practice/small_monitoring.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <article class="tiny">
-<h1>アラートが多すぎる&mdash;&mdash;必要最小限のシステム監視のために</h1>
+<h1>アラートが多すぎる&mdash;&mdash;システム監視について</h1>
 <figure>
   <blockquote>
     <p style="text-indent:0em">「十時までに三十四人。午後二時には四十八人になりました。男性が四十二人、女性が六人」</p>
@@ -20,13 +20,42 @@
 </figure>
 <hr>
 
-<h2>必要最小限のシステム監視とは？</h2>
+<h2>概要</h2>
 
-<p>「必要最小限のシステム監視」とは文字通り必要なものしか監視をしない主義のシステム監視設計と運用です。監視設計の時点では想定していなかったような異常を取り逃がす可能性がありますが、無駄な監視項目のヒストリがディスク容量を逼迫させたり、過多なアラートによる監視システムの狼少年化を防ぐことができます。</p>
+<p>本稿では監視システムとして<a href="https://www.zabbix.com/features">Zabbix</a>を前提としています。しかしどの監視システムでも適用できる話題を書くのでZabbixの利用有無は関係ありません。</p>
 
-<p>OSの基本的なメトリクスだけでも監視可能な項目は膨大ですが、その中であなたのシステムで監視すべきものはごくわずかです。その監視すべき項目の中でアラートを発報しなければならないものはさらに限られるでしょう。Mike Julianが『入門 監視』（松浦隼人 訳）の中で「MySQLが継続的にCPU全部を使っていたとしても、レスポンスタイムが許容範囲に収まっていれば何も問題ありません」（p13）と述べたように、ひとつひとつのメトリクスに基準&mdash;&mdash;メモリ使用量が90％を超えたら・CPU使用率が80％以上なら・……など&mdash;&mdash;を設けるよりも全体的なパフォーマンスやユーザからみたふるまいを監視すべきです。</p>
+<p>簡単に話をまとめると、以下のような姿勢でシステム監視をすべきということです。</p>
 
-<p>このように考えれば、システム監視ソフトウェアを導入するときは「監視したいシステムではなにが動いていればいいのか？」「動いているとはどういう状態か？」を自問しなければなりません。なにをどう監視すればいいのかさえ分かれば、監視項目のひとつひとつに理由付けができ無駄のない最小限のシステム監視を実現できるでしょう。</p>
+<ul>
+  <li>すべての異常を検知しようとするよりも、監視対象に応じて継続的に改善を続ける</li>
+  <li>マシンのメトリクスよりも、そのマシンが提供するサービスのふるまいを監視する</li>
+</ul>
+
+<h2>無駄のない監視の美学</h2>
+
+<p>OSの基本的なメトリクスだけでも監視可能な項目は膨大です。ただしあなたのシステムで監視すべきメトリクスはごくわずかです。その監視すべき項目の中でアラートを発報しなければならないものはさらに限られるでしょう。Mike Julianが『入門 監視』（松浦隼人 訳）の中で「MySQLが継続的にCPU全部を使っていたとしても、レスポンスタイムが許容範囲に収まっていれば何も問題ありません」（p13）と述べたように、ひとつひとつのメトリクスに基準&mdash;&mdash;メモリ使用量が90％を超えたら・CPU使用率が80％以上なら・……など&mdash;&mdash;を設けるよりも全体的なパフォーマンスやユーザからみたふるまいを監視すべきです。</p>
+
+<p>このように考えれば、システム監視ソフトウェアを導入するときは「監視したいシステムではなにが動いていればいいのか？」「動いているとはどういう状態か？」を自問しなければなりません。なにをどう監視すればいいのかさえ分かれば、監視項目のひとつひとつに理由付けができ無駄のないシステム監視を実現できるでしょう。</p>
+
+<h2>ふるまいを監視する</h2>
+
+<p>ここにひとつWebサーバを動かし静的なHTMLページを公開しているマシンがあるとします。このマシンを監視したいとします。ここまでは順調ですが次は立ち止まって考えなければいけません。「なにを監視すればいいだろう？」</p>
+
+<p>監視システムで収集できるメトリクスは無尽蔵でどれを監視するのも魅力的にみえます。基本的なメトリクスでいえばCPU・メモリ・ディスク・ネットワーク速度あたりがあり、ログも監視できます。閾値を考えてトリガーの発報条件とアラート発生後の後処理まで考えればもう手一杯になります。</p>
+
+<p>考え始めるときりがないですが冷静になってみましょう。動かしているのはWebサーバですから、ブラウザでアクセスしてくる世界中のユーザから見て一番大事な問題は「Webページを読めるか？」「許容できる秒数以内にページが描画されるか？」あたりでしょう。Webサーバとの通信をTLSで暗号化しているのであればなりすましを考慮して「このサーバ証明書は有効で正しいものなのか？」と気にするユーザもいるかもしれません。</p>
+
+<p>要するに、サーバ管理者が気にすることとユーザが気にすることは必ずしも一致しないのです。そしてユーザからみたふるまいさえ良ければ、ロードアベレージが6を越えようがメモリ使用量が限界まで近づいていようが問題ではないのです。逆に、メトリクスひとつひとつに異常はなくてもページ描画に通常の20倍も時間がかかっているなら異常事態です。</p>
+
+<p>個々のメトリクスだけを観察していま何が問題になっているかを考察するのは難しいですが、なにが問題になっているのかさえ分かれば個々のメトリクスをヒントに原因究明ができます。したがって監視の優先順位は（1）サービスのふるまい、（2）基本的なメトリクスになります。ですがOSのメトリクスを取るほうがはるかに簡単で監視した気分になれるのでこの順位付けは逆転しがちです。</p>
+
+<h2>「監視したつもり」標準テンプレートの害</h2>
+
+<p>Zabbixの監視テンプレートは豊富に揃えられており、Zabbixが提供する標準テンプレートさえあれば監視はなにも問題がないようにみえます。しかしまずサービスのふるまいを監視するのが先決だという見方をすれば、基本的なメトリクスを収集する以上の役割を標準テンプレートは担えないと気づくでしょう。</p>
+
+<p>標準テンプレートにはトリガーも用意されていますが、提供するサービスやデプロイするマシンの性能などはチームによってバラバラなはずなのにトリガー基準をひとつに決定できるわけがありません。またCPU利用率やメモリ使用量が高いからといって必ずしもサービスのふるまいに影響するわけでもありません。このことから、あらかじめ「親切」に設定されているトリガー基準は不必要です。必要になるとしても現場によって変更する必要があります。</p>
+
+<p>このように、標準テンプレートではふるまい監視ができず、OSのメトリクスを収集するにせよ不必要なアラートが発生する可能性が高いです。無駄なアラートはアラート疲れあるいは監視の狼少年化を引き起こし、本当に意味のあるアラートを見逃すきっかけになります。現場に合ったテンプレートの複製元として標準テンプレートを活用するほうが得策です。</p>
 
 <h2>参考文献</h2>
 
