--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <li><a href="./practice/html.html">私家版HTML文書執筆ガイド</a></li>
 <li><a href="./practice/shellscript.html">私家版ShellScript Coding Style</a></li>
 <li><a href="./practice/remotework.html">リモートワークのプラクティス</a></li>
+<li><a href="./practice/monitoring.html">アラートが多すぎる&mdash;&mdash;システム監視について</a></li>
 </ul>
 
 <h3 id="essay">エッセイ</h3>
