--- a/practice/monitoring.html
+++ b/practice/monitoring.html
@@ -22,13 +22,13 @@
 
 <h2>概要</h2>
 
-<p>本稿では監視システムとして<a href="https://www.zabbix.com/features">Zabbix</a>を前提としています。しかしどの監視システムでも適用できる話題を書くのでZabbixの利用有無は関係ありません。</p>
+<p>本稿では監視システムとして<a href="https://www.zabbix.com/features">Zabbix</a>を前提とし用語を使っています。しかしどの監視システムでも適用できる話題を書くのでZabbixの利用有無は関係ありません。</p>
 
-<p>簡単に話をまとめると、以下のような姿勢でシステム監視をすべきということです。</p>
+<p>最初に論旨を明確にしておきます。</p>
 
 <ul>
-  <li>すべての異常を検知しようとするよりも、監視対象に応じて継続的に改善を続ける</li>
-  <li>マシンのメトリクスよりも、そのマシンが提供するサービスのふるまいを監視する</li>
+  <li>すべての異常を検知しようとするよりも、監視対象に応じて継続的に改善を続けましょう</li>
+  <li>マシンのメトリクスよりも、そのマシンが提供するサービスのふるまいを監視しましょう</li>
 </ul>
 
 <h2>無駄のない監視の美学</h2>
@@ -43,7 +43,21 @@
 
 <p>監視システムで収集できるメトリクスは無尽蔵でどれを監視するのも魅力的にみえます。基本的なメトリクスでいえばCPU・メモリ・ディスク・ネットワーク速度あたりがあり、ログも監視できます。閾値を考えてトリガーの発報条件とアラート発生後の後処理まで考えればもう手一杯になります。</p>
 
-<p>考え始めるときりがないですが冷静になってみましょう。動かしているのはWebサーバですから、ブラウザでアクセスしてくる世界中のユーザから見て一番大事な問題は「Webページを読めるか？」「許容できる秒数以内にページが描画されるか？」あたりでしょう。Webサーバとの通信をTLSで暗号化しているのであればなりすましを考慮して「このサーバ証明書は有効で正しいものなのか？」と気にするユーザもいるかもしれません。</p>
+<p>考え始めるときりがないですが冷静になってみましょう。動かしているのはWebサーバですから、ブラウザでアクセスしてくる世界中のユーザから見て一番大事な問題は「Webページを読めるか？」「許容できる秒数以内にページが描画されるか？」あたりでしょう。Webサーバとの通信をTLSで暗号化しているなら、なりすましを考慮して「このサーバ証明書は有効で正しいものなのか？」と気にするユーザもいるかもしれません。</p>
+
+<figure style="text-align:center">
+  <ul>
+    <li>HTTPステータスコード</li>
+    <li>ページロード時間</li>
+    <li>JavaScriptの例外</li>
+    <li>サーバ証明書の有効期限</li>
+    <li>アクセスログ／エラーログ</li>
+    <li>ネットワークI/O</li>
+    <li>ディスク使用量</li>
+    <li>Webサーバマシンへのping</li>
+  </ul>
+  <figcaption>静的ページを提供するWebサーバの監視例</figcaption>
+</figure>
 
 <p>要するに、サーバ管理者が気にすることとユーザが気にすることは必ずしも一致しないのです。そしてユーザからみたふるまいさえ良ければ、ロードアベレージが6を越えようがメモリ使用量が限界まで近づいていようが問題ではないのです。逆に、メトリクスひとつひとつに異常はなくてもページ描画に通常の20倍も時間がかかっているなら異常事態です。</p>
 
@@ -53,7 +67,7 @@
 
 <p>Zabbixの監視テンプレートは豊富に揃えられており、Zabbixが提供する標準テンプレートさえあれば監視はなにも問題がないようにみえます。しかしまずサービスのふるまいを監視するのが先決だという見方をすれば、基本的なメトリクスを収集する以上の役割を標準テンプレートは担えないと気づくでしょう。</p>
 
-<p>標準テンプレートにはトリガーも用意されていますが、提供するサービスやデプロイするマシンの性能などはチームによってバラバラなはずなのにトリガー基準をひとつに決定できるわけがありません。またCPU利用率やメモリ使用量が高いからといって必ずしもサービスのふるまいに影響するわけでもありません。このことから、あらかじめ「親切」に設定されているトリガー基準は不必要です。必要になるとしても現場によって変更する必要があります。</p>
+<p>標準テンプレートにはトリガーも用意されていますが、提供するサービスやデプロイするマシンの性能などはチームによってバラバラなはずなのにトリガー基準をひとつに決定できるわけがありません。またCPU利用率やメモリ使用量が高いからといって必ずしもサービスのふるまいに影響するわけでもありません。このことから、あらかじめ「親切」に設定されているトリガー基準は不必要です。必要になるとしても監視対象に応じて変更する必要があります。</p>
 
 <p>このように、標準テンプレートではふるまい監視ができず、OSのメトリクスを収集するにせよ不必要なアラートが発生する可能性が高いです。無駄なアラートはアラート疲れあるいは監視の狼少年化を引き起こし、本当に意味のあるアラートを見逃すきっかけになります。現場に合ったテンプレートの複製元として標準テンプレートを活用するほうが得策です。</p>
 
