wip: how to invest: change h tag value

--- a/essay/how_to_invest.html
+++ b/essay/how_to_invest.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <article class="tiny">
+<h1>資産運用あるいは家計を見つめ直すこと</h1>
+<p>（1）先人によって議論が尽くされており、（2）この記事そのものに新規性はなく、（3）とはいえ信頼できる筋による論拠はあるに越したことはないため、まず最初に参考文献を提示します。この記事は僕自身の資産運用の理解についてアウトプットし定期的に見返すために存在しています。</p>
 <hr>
-<p>（1）先人によって議論が尽くされており、（2）この記事そのものに新規性はなく、（3）とはいえ信頼できる筋による論拠はあるに越したことはないため、まず最初に参考文献を提示します。</p>
-
-<h1>参考文献</h1>
+<h2>参考文献</h2>
 <ul>
   <li><a href="https://hayatoito.github.io/2020/investing/">普通の人が資産運用で99点をとる方法とその考え方</a></li>
   <li>Charles Ellis『チャールズ・エリスのインデックス投資入門』</li>
@@ -21,7 +21,7 @@
   <li>Burton Malkiel『ウォール街のランダム・ウォーカー』</li>
 </ul>
 
-<h1>概要：会社員のための資産運用</h1>
+<h2>概要：会社員のための資産運用</h2>
 <ol>
   <li>支出を減らし貯蓄を作る。</li>
   <li>株式と現金の比率を考える。</li>
@@ -29,7 +29,7 @@
   <li>収入を増やすよう努める。</li>
 </ol>
 
-<h2>例：月収20万円の会社員の場合</h2>
+<h3>例：月収20万円の会社員の場合</h3>
 <p>税金控除後の月収が20万円だとして上記の資産運用を試みます。はじめに毎月必ず発生する固定費を洗い出します。</p>
 
 <table>
