wip: how to invest: change table layout

--- a/essay/how_to_invest.html
+++ b/essay/how_to_invest.html
@@ -32,7 +32,7 @@
 <h3>例：月収20万円の会社員の場合</h3>
 <p>税金控除後の月収が20万円だとして上記の資産運用を試みます。はじめに毎月必ず発生する固定費を洗い出します。</p>
 
-<table>
+<table style="width: 80%; margin: 0 auto;">
   <caption>毎月の収入と固定費およびその差額</caption>
   <thead style="margin-right: auto;">
     <tr><th>項目</th><th>金額（円）</th></tr>
@@ -54,7 +54,7 @@
 
 <p>次に固定費以外の支出を洗い出します。固定費に比べれば削減の余地は大きいですが無理に減らそうとすると健康に悪影響を及ぼしたり精神的につらくなったりします。また毎月決まって発生する支出でなければここに含めてしまっていいでしょう。</p>
 
-<table>
+<table style="width: 80%; margin: 0 auto;">
   <caption>固定費以外の支出とその差額</caption>
   <thead style="margin-right: auto;">
     <tr><th>項目</th><th>金額（円）</th></tr>
