wip: how to invest: change table layout

--- a/essay/how_to_invest.html
+++ b/essay/how_to_invest.html
@@ -9,13 +9,13 @@
 <body>
 <article class="tiny">
 <h1>資産運用あるいは家計を見つめ直すこと</h1>
-<p>（1）先人によって議論が尽くされており、（2）この記事そのものに新規性はなく、（3）とはいえ信頼できる筋による論拠はあるに越したことはないため、まず最初に参考文献を提示します。この記事は僕自身の資産運用の理解についてアウトプットし定期的に見返すために存在しています。</p>
+<p>（1）先人によって議論が尽くされており、（2）この記事そのものに新規性はなく、（3）とはいえ信頼できる筋による論拠はあるに越したことはないため最初に参考文献を提示します。この記事は僕自身の資産運用の理解についてアウトプットし定期的に見返すために存在しています。</p>
 <hr>
 <h2>参考文献</h2>
 <ul>
   <li><a href="https://hayatoito.github.io/2020/investing/">普通の人が資産運用で99点をとる方法とその考え方</a></li>
   <li>Charles Ellis『チャールズ・エリスのインデックス投資入門』</li>
-  <li>Burton Malkiel &and; Charles Ellis『投資の大原則 [第2版]』</li>
+  <li>Burton Malkiel &amp; Charles Ellis『投資の大原則 [第2版]』</li>
   <li>JL Collins『父が娘に伝える自由に生きるための30の投資の教え』</li>
   <li>Charles Ellis『敗者のゲーム』</li>
   <li>Burton Malkiel『ウォール街のランダム・ウォーカー』</li>
@@ -32,41 +32,41 @@
 <h3>例：月収20万円の会社員の場合</h3>
 <p>税金控除後の月収が20万円だとして上記の資産運用を試みます。はじめに毎月必ず発生する固定費を洗い出します。</p>
 
-<table style="width: 80%; margin: 0 auto;">
+<table style="width:80%; margin:0 auto;">
   <caption>毎月の収入と固定費およびその差額</caption>
-  <thead style="margin-right: auto;">
+  <thead>
     <tr><th>項目</th><th>金額（円）</th></tr>
   </thead>
-  <tbody style="margin-right: auto;">
-    <tr><td>収入</td><td>200,000</td></tr>
-    <tr><td>家賃</td><td>-70,000</td></tr>
-    <tr><td>奨学金</td><td>-14,400</td></tr>
-    <tr><td>水道</td><td>-2,000</td></tr>
-    <tr><td>電気</td><td>-4,000</td></tr>
-    <tr><td>ガス</td><td>-2,000</td></tr>
-    <tr><td>生命保険</td><td>-2,000</td></tr>
-    <tr><td>通信費</td><td>-1,600</td></tr>
+  <tbody>
+    <tr><td>収入</td><td style="text-align:right;">200,000</td></tr>
+    <tr><td>家賃</td><td style="text-align:right;">-70,000</td></tr>
+    <tr><td>奨学金</td><td style="text-align:right;">-14,400</td></tr>
+    <tr><td>水道</td><td style="text-align:right;">-2,000</td></tr>
+    <tr><td>電気</td><td style="text-align:right;">-4,000</td></tr>
+    <tr><td>ガス</td><td style="text-align:right;">-2,000</td></tr>
+    <tr><td>生命保険</td><td style="text-align:right;">-2,000</td></tr>
+    <tr><td>通信費</td><td style="text-align:right;">-1,600</td></tr>
   </tbody>
   <tfoot>
-    <tr><td>残高</td><td>104,000</td></tr>
+    <tr><td><b>残高</b></td><td style="text-align:right;"><b>104,000</b></td></tr>
   </tfoot>
 </table>
 
 <p>次に固定費以外の支出を洗い出します。固定費に比べれば削減の余地は大きいですが無理に減らそうとすると健康に悪影響を及ぼしたり精神的につらくなったりします。また毎月決まって発生する支出でなければここに含めてしまっていいでしょう。</p>
 
-<table style="width: 80%; margin: 0 auto;">
+<table style="width:80%; margin:0 auto;">
   <caption>固定費以外の支出とその差額</caption>
-  <thead style="margin-right: auto;">
-    <tr><th>項目</th><th>金額（円）</th></tr>
+  <thead>
+    <tr><th>項目</th><th style="text-align:right;">金額（円）</th></tr>
   </thead>
-  <tbody style="margin-right: auto;">
-    <tr><td>固定費を引いた残高</td><td>104,000</td></tr>
-    <tr><td>食費（外食込み）</td><td>-60,000</td></tr>
-    <tr><td>消耗品予備費</td><td>-5,000</td></tr>
-    <tr><td>趣味や服など</td><td>-20,000</td></tr>
+  <tbody>
+    <tr><td>固定費を引いた残高</td><td style="text-align:right;">104,000</td></tr>
+    <tr><td>食費（外食込み）</td><td style="text-align:right;">-60,000</td></tr>
+    <tr><td>消耗品予備費</td><td style="text-align:right;">-5,000</td></tr>
+    <tr><td>趣味や服など</td><td style="text-align:right;">-20,000</td></tr>
   </tbody>
   <tfoot>
-    <tr><td>残高</td><td>19,000</td></tr>
+    <tr><td><b>残高</b></td><td style="text-align:right;"><b>19,000</b></td></tr>
   </tfoot>
 </table>
 
