wip: how to invest: Fix table layout mistake

--- a/essay/how_to_invest.html
+++ b/essay/how_to_invest.html
@@ -35,7 +35,7 @@
 <table style="width:80%; margin:0 auto;">
   <caption>毎月の収入と固定費およびその差額</caption>
   <thead>
-    <tr><th>項目</th><th>金額（円）</th></tr>
+    <tr><th>項目</th><th style="text-align:right;">金額（円）</th></tr>
   </thead>
   <tbody>
     <tr><td>収入</td><td style="text-align:right;">200,000</td></tr>
