--- a/essay/how_to_invest.html
+++ b/essay/how_to_invest.html
@@ -21,7 +21,18 @@
   <li>Burton Malkiel『ウォール街のランダム・ウォーカー』</li>
 </ul>
 
-<h2>概要：会社員のための資産運用</h2>
+<ol>
+  <li><a href="#abstract">概要：会社員のための資産運用</a>
+    <ol>
+      <li><a href="#example">例：月収20万円の会社員の場合</a></li>
+    </ol>
+  </li>
+  <li><a href="#to_be_simple">倹約のためにできること</a></li>
+  <li><a href="#investing_and_exit">投資戦略と出口戦略</a></li>
+  <li><a href="#enemies">敵</a></li>
+</ol>
+
+<h2 id="abstract">概要：会社員のための資産運用</h2>
 <ol>
   <li>支出を減らし貯蓄を作る。</li>
   <li>株式と現金の比率を考える。</li>
@@ -52,10 +63,10 @@
   </tfoot>
 </table>
 
-<p>次に固定費以外の支出を洗い出します。固定費に比べれば削減の余地は大きいですが無理に減らそうとすると健康に悪影響を及ぼしたり精神的につらくなったりします。また毎月決まって発生する支出でなければここに含めてしまっていいでしょう。</p>
+<p>次に固定費以外の支出（変動費）を洗い出します。固定費に比べれば削減の余地は大きいですが無理に減らそうとすると健康に悪影響を及ぼしたり精神的につらくなったりします。また毎月決まって発生する支出でなければここに含めてしまっていいでしょう。</p>
 
 <table style="width:80%; margin:0 auto;">
-  <caption>固定費以外の支出とその差額</caption>
+  <caption>変動費とその差額</caption>
   <thead>
     <tr><th>項目</th><th style="text-align:right;">金額（円）</th></tr>
   </thead>
@@ -72,13 +83,25 @@
 
 <p>結果、貯蓄に回せる金額は19,000円だと分かりました。ここで貯蓄のうち半分を投資に使うとします。証券会社で特定口座と<a href="https://www.fsa.go.jp/policy/nisa2/about/tsumitate/overview/index.html">つみたてNISA口座</a>を開設し、毎月9,500円を証券口座へ自動的に振替するよう設定します。つみたてNISAの枠で「<a href="https://emaxis.jp/fund/253425.html">eMAXIS Slim 全世界株式（オールカントリー）</a>」を毎月9,500円分積み立てるよう設定します。</p>
 
-<p>つみたてNISA制度の非課税期間が終了するまで同額を積み立てし続けるとしましょう。松井証券のシミュレーションによれば、過去の実績をもとに「eMAXIS Slim 全世界株式（オールカントリー）」を20年間運用し続けると4,570,000円になっていると期待できるようです。総投資金額は2,160,000円なので悪くない数字です。</p>
+<p>これで自動振替と自動積立で証券口座を触らなくても資産運用ができるようになりました。あとはなにもやることはありません。証券会社のアカウントでログインするシチュエーションは、投資へ回す金額が変わったとき自動化している設定を見直すときか、急に出費がかさんで投資信託を売却するときくらいでしょう。証券口座の残高を毎日確認したり、市況を見計らって売買をしたりする必要はありません。つみたてNISA枠での購入金額は年40万円が限度なので現金との比率を考えたリバランスもできません。ひたすらBuy and Hold戦略をとります。</p>
 
-<p>特定ファンドを見ず期待する年率で見るとどうなるでしょうか。<a href="https://www.rakuten-sec.co.jp/web/fund/saving/simulation/">楽天証券のシミュレーション</a>によれば、上と同じ設定で年率5%のリターンが得られるインデックスファンドを買ったとすると、20年後には約3,900,000円になっているようです。</p>
+<p>つみたてNISA制度の非課税期間が終了するまで同額を積み立てし続けるとしましょう。松井証券のシミュレーションによれば、過去の実績をもとに「eMAXIS Slim 全世界株式（オールカントリー）」を20年間運用し続けると457万円になっていると期待できるようです。総投資金額は216万円なので悪くない数字です。</p>
 
-<p>自動振替と自動積立で証券口座を触らなくても資産運用ができるようになったのであとはなにもしなくていいです。投資へ回す金額が変わったとき自動化している設定を見直すか、急に出費がかさんだときに投資信託を売却して現金へ換えるかくらいでしょう。証券口座の残高を毎日確認したり、市況を見計らって売買をしたりする必要はありません。つみたてNISA枠での購入金額は年40万円が限度なので現金との比率を考えたリバランスもできません。ひたすらBuy and Hold戦略をとります。</p>
+<img src="./img/how_to_invest_001.png" alt="matsui_simulation">
 
-<p>当然、上で述べた期待リターンは投資信託の購入金額を増やせば増やすほど伸ばすことができます。そこで収入を増やすよう努力すればいいのです。食費0円で霞を食う生活は不可能なように、倹約して浮かせられる金額には限界がありますが、収入は比較的伸びしろがあるでしょう。以上が会社員のための資産運用の具体例です。</p>
+<p>特定ファンドを見ず期待する年率で見るとどうなるでしょうか。<a href="https://www.rakuten-sec.co.jp/web/fund/saving/simulation/">楽天証券のシミュレーション</a>によれば、上と同じ設定で年率5%のリターンが得られるインデックスファンドを買ったとすると、20年後には約390万円になっているようです。</p>
+
+<img src="./img/how_to_invest_002.png" alt="rakuten_simulation">
+
+<p>悲観的になってみて、平均年率5%で19年と11ヶ月間運用してこられたのにも関わらず、非課税期間が終了する直前に30%の暴落が来たとするとどうでしょうか。それでも270万円程度は残る計算です。</p>
+
+<p>当然、投資信託の購入金額を増やすほど将来の利益額を伸ばすことができます。質素倹約を心がけて浮動費を減らしたり、各種契約を見直して固定費を減らしたりするのも確かに効果はありますが、一番よいのは収入を増やすよう努力することです。食費0円で霞を食う生活は不可能なように、倹約して浮かせられる金額には限界がありますが、それに比べれば収入を増やすほうが効果は高いでしょう。以上が会社員のための資産運用の具体例です。</p>
+
+<h2 id="to_be_simple">倹約のためにできること</h2>
+
+<h2 id="investing_and_exit">出口戦略</h2>
+
+<h2 id="enemies">敵</h2>
 
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
