wip: how to invest: move ToC place

--- a/essay/how_to_invest.html
+++ b/essay/how_to_invest.html
@@ -10,18 +10,9 @@
 <article class="tiny">
 <h1>資産運用あるいは家計を見つめ直すこと</h1>
 <p>（1）先人によって議論が尽くされており、（2）この記事そのものに新規性はなく、（3）とはいえ信頼できる筋による論拠はあるに越したことはないため最初に参考文献を提示します。この記事は僕自身の資産運用の理解についてアウトプットし定期的に見返すために存在しています。</p>
-<hr>
-<h2>参考文献</h2>
-<ul>
-  <li><a href="https://hayatoito.github.io/2020/investing/">普通の人が資産運用で99点をとる方法とその考え方</a></li>
-  <li>Charles Ellis『チャールズ・エリスのインデックス投資入門』</li>
-  <li>Burton Malkiel &amp; Charles Ellis『投資の大原則 [第2版]』</li>
-  <li>JL Collins『父が娘に伝える自由に生きるための30の投資の教え』</li>
-  <li>Charles Ellis『敗者のゲーム』</li>
-  <li>Burton Malkiel『ウォール街のランダム・ウォーカー』</li>
-</ul>
 
 <ol>
+  <li><a href="#ref">参考文献</a></li>
   <li><a href="#abstract">概要：会社員のための資産運用</a>
     <ol>
       <li><a href="#example">例：月収20万円の会社員の場合</a></li>
@@ -31,6 +22,17 @@
   <li><a href="#investing_and_exit">投資戦略と出口戦略</a></li>
   <li><a href="#enemies">敵</a></li>
 </ol>
+
+<hr>
+<h2 id="ref">参考文献</h2>
+<ul>
+  <li><a href="https://hayatoito.github.io/2020/investing/">普通の人が資産運用で99点をとる方法とその考え方</a></li>
+  <li>Charles Ellis『チャールズ・エリスのインデックス投資入門』</li>
+  <li>Burton Malkiel &amp; Charles Ellis『投資の大原則 [第2版]』</li>
+  <li>JL Collins『父が娘に伝える自由に生きるための30の投資の教え』</li>
+  <li>Charles Ellis『敗者のゲーム』</li>
+  <li>Burton Malkiel『ウォール街のランダム・ウォーカー』</li>
+</ul>
 
 <h2 id="abstract">概要：会社員のための資産運用</h2>
 <ol>
