wip: how to invest: remove unnecessary section

--- a/essay/how_to_invest.html
+++ b/essay/how_to_invest.html
@@ -18,7 +18,6 @@
       <li><a href="#example">例：月収20万円の会社員の場合</a></li>
     </ol>
   </li>
-  <li><a href="#to_be_simple">倹約のためにできること</a></li>
   <li><a href="#investing_and_exit">投資戦略と出口戦略</a></li>
   <li><a href="#enemies">敵</a></li>
 </ol>
@@ -99,9 +98,7 @@
 
 <p>当然、投資信託の購入金額を増やすほど将来の利益額を伸ばすことができます。質素倹約を心がけて浮動費を減らしたり、各種契約を見直して固定費を減らしたりするのも確かに効果はありますが、一番よいのは収入を増やすよう努力することです。食費0円で霞を食う生活は不可能なように、倹約して浮かせられる金額には限界がありますが、それに比べれば収入を増やすほうが効果は高いでしょう。以上が会社員のための資産運用の具体例です。</p>
 
-<h2 id="to_be_simple">倹約のためにできること</h2>
-
-<h2 id="investing_and_exit">出口戦略</h2>
+<h2 id="investing_and_exit">投資戦略と出口戦略</h2>
 
 <h2 id="enemies">敵</h2>
 
