--- a/netbsd/buildbot.html
+++ b/netbsd/buildbot.html
@@ -191,7 +191,7 @@ c['schedulers'].append(schedulers.ForceScheduler(
 <pre><code>web_deploy = util.BuildFactory()
 web_deploy.addStep(steps.ShellCommand(command=['/usr/local/bin/webdeploy']))</code></pre>
 
-<p><code>ShellCommand</code>以外のBuild Stepsについては<a href="http://docs.buildbot.net/latest/manual/configuration/buildsteps.html">2.5.10. Build Steps</a>を参照してください。</p>
+<p><code>ShellCommand</code>以外のBuild Stepsについては<a href="https://docs.buildbot.net/latest/full.html#build-steps">2.5.11. Build Steps</a>を参照してください。</p>
 
 <h3>builders</h3>
 <p>WebDeployビルダを作成します。<a href="#worker">「NetBSD」Worker</a>が、web_deployインスタンスで定義されたビルド手順を実行するようにビルダを設定しています。</p>
