Fix 404 link errors

--- a/essay/practice_tdd.html
+++ b/essay/practice_tdd.html
@@ -22,7 +22,7 @@
 <h2>実践</h2>
 <p>もしなにかしらのコマンドラインツールを作るのであれば、そのときはTDDでやってみようと考えました。ちょうどConoHa VPSでマシンを契約していて、コマンドラインから仮想マシンを操作できればなと思っていたところでした。APIは提供されていたので、PythonでAPIのWrapperライブラリを書いてコマンドラインツールを作ろうと思い立ちました。</p>
 
-<p>成果物は<a href="https://github.com/user340/conohactl">https://github.com/user340/conohactl</a>です。最初のcommitから数えると11日ほどかかりました。Pythonのドキュメントを調べたりあまり手が動かなかったりとペースは遅かったのですが、最低限自分がやりたいことは実現できました。</p>
+<p>成果物はhttps://github.com/user340/conohactl（現在削除済み）です。最初のcommitから数えると11日ほどかかりました。Pythonのドキュメントを調べたりあまり手が動かなかったりとペースは遅かったのですが、最低限自分がやりたいことは実現できました。</p>
 
 <p>TDDを実践してみて「これが良いな」と思ったことがいくつかあります。</p>
 
