--- a/netbsd/xen.html
+++ b/netbsd/xen.html
@@ -157,7 +157,7 @@ disk = [ 'file:/root/netbsd.img,0,w' ]</code></pre>
 <li><cite>The Xen Project, <a href="https://www.xenproject.org/">https://www.xenproject.org/</a></cite></li>
 <li><cite>oshima, <a href="http://www.yagoto-urayama.jp/~oshimaya/netbsd/xen64.html">NetBSD/xen環境の構築 64bit編</a></cite></li>
 <li><cite>clare, <a href="https://www.clarestudio.org/netbsd/xen.html">NetBSD/xen Configuration</a></cite></li>
-<li><cite>isihara, <a href="http://www.rururu.org/fswiki/wiki.cgi?page=NetBSD%A3%C7XenXen%C6%B0%A4%AF%A4%E8">NetBSDでXenXen動くよ</a></cite></li>
+<li><cite>isihara, NetBSDでXenXen動くよ（http://www.rururu.org/fswiki/wiki.cgi?page=NetBSD%A3%C7XenXen%C6%B0%A4%AF%A4%E8 ホスト消失）</cite></li>
 </ol>
 <hr>
 <footer>
