--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 <h3 id="freebsd">FreeBSD</h3>
 <ul>
+<li><a href="./freebsd/goss.html">gossを使ってFreeBSDサーバの設定をテストする</a></li>
 <li><a href="./freebsd/pfrouting.html">pfを使い外部からのアクセスを内部ネットワークへリダイレクトする</a></li>
 <li><a href="./freebsd/office.html">執務環境としてのFreeBSD</a></li>
 </ul>
