--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <h3 id="netbsd">NetBSD</h3>
 <ul>
+<li><a href="./netbsd/podman.html">NetBSDでPodmanからLinuxコンテナを動かす</a></li>
 <li><a href="./netbsd/ansible.html">AnsibleホストとしてNetBSDを扱う</a></li>
 <li><a href="./netbsd/jenkins.html">NetBSDにJenkinsをインストールする</a></li>
 <li><a href="./netbsd/sysupgrade.html">sysupgradeを使いsets単位でバイナリアップデートをする</a></li>
