--- a/template.html
+++ b/template.html
@@ -9,6 +9,7 @@
 <body>
 <article class="tiny">
 <h1>@Page Title@</h1>
+<p style="text-align:right;">2021年月日 初稿</p>
 <hr>
 <!-- @Edit here@ -->
 <hr>
