--- a/netbsd/podman.html
+++ b/netbsd/podman.html
@@ -43,7 +43,7 @@
 <h3 id="podman-mail">netbsd-usersに投稿されたPodmanパッケージ追加を知らせるメール全文</h3>
 
 <blockquote>
-<pre>
+<pre><code>
 To: netbsd-users%netbsd.org@localhost
 Subject: Running docker containers with podman (on NetBSD!)
 From: coypu%sdf.org@localhost
@@ -83,13 +83,18 @@ fetch https://dl-cdn.alpinelinux.org/alpine/v3.14/community/x86_64/APKINDEX.tar.
 Executing busybox-1.33.1-r3.trigger
 OK: 13 MiB in 16 packages
 /bin/sh: ELF 64-bit LSB pie executable, x86-64, version 1 (SYSV), dynamically linked, interpreter /lib/ld-musl-x86_64.so.1, stripped
-</pre>
+</code></pre>
 </blockquote>
 
 <h3 id="how-to-edit-boot-entry">Leonardo TaccariによるPodman VMのブートエントリ編集手順</h3>
 
 <blockquote>
-<pre>
+<pre><code>
+To: netbsd-users%netbsd.org@localhost
+Subject: Re: Running docker containers with podman (on NetBSD!)
+From: Leonardo Taccari &lt;leot%NetBSD.org@localhost&gt;
+Date: Sun, 05 Sep 2021 22:12:53 +0200
+
   coypu%sdf.org@localhost writes:
 &gt; Hi all,
 &gt;
@@ -148,7 +153,7 @@ the notes that I have collected.
  6. In GRUB press `c' and then `halt' in order to poweroff the machine
     (we're done!)
  7. Start the machine as usual via `podman machine start'
-</pre>
+</code></pre>
 </blockquote>
 
 <hr>
